<resources>
    <string name="app_name">ProyectoFinalGymMz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">siguiente</string>
    <string name="web_clave_id">111485064642141750369</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_google">Login with google</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logout">Logout</string>
</resources>